# EscapeWright

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  pytest.ini  test.py
ControlPanel/: README.md  config.yaml  package-lock.json  package.json  setup.sh
ControlPanel/api/: Pipfile  README.md  api.sh  pi_list.ew  prep_environment.sh
ControlPanel/client/: .env  CODESAMURAIPAGEDELETE.html  OLDCSSDELETE.css  index.html  package-lock.json  package.json  vite.config.js
ControlPanel/config/: config.yaml  script.md
NodeModule/: README.md
PiSetup/: nvim.sh  redis.sh
TaskNode/: Pipfile  README.md  config.yaml  install.sh  run.sh
TaskNode/src/: app.py  enums.py  escapewright.service  gunicorn.conf.py  hello_role.py  role.py  transmitter.py
TestingScripts/: config.yaml  stress_test_task_node.sh
control/: PiNode.py  pi_list.ew  roominfo.ew
control/api/: PiNodeController.py  Pipfile  README.md  app.py  roominfo.ew  run.sh
escapewright/: Plan  __init__.py  client.py  control.py  controlpanel.py  enums.py  escapi.py  escapiclient.py  escapiclientcontroller.py  escapiserver.py  escapitransmitter.py  ewfunct.py  file_reader.py  header.lodomo  locknswitch.py  log_manager.py  logo.txt  observable.py  observer.py  puzzle.py  role.py  role_template.py  timer.py  utils.py
setup/: ew_setup.sh  setup.py
setups/: control_setup.py  setup.py
tests/: clientcontroller_test.py  conftest.py  fr_dict_test.txt  percentage.py  role_template_test.py  test_control.py  test_escapewright.py  test_file_reader.py  test_log_manager.py  test_puzzle.py  test_role.py  test_role_template.py  test_server.py
tests/control/: control.py  (+7 more)
(+107 files in other folders)
