#
#        ███████████ ████████    ████████████
#        ██     ██      ██       ██   ██   ██ █
#        ███████████ ██      ██  ██████████
#        ██          ██ ██     ██████ ██     ██
#        ███████████ █████    ██     ███████
#                   █        █████████████████   ████████         
#                    █    █ ██   ██   ██  ██     ██   ██   ██
#                     ████  ██████   ██  ██  █████████   ██
#                      ████   ██  █   ██  ██   ████   ██   ██
#                             ██   ████████████   ██   ██
#
#
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "escapewright"
version = "0.1.0"
description = "A library to help build Escape Room experiences."
authors = [{ name = "Lorenzo D. Moon", email = "lodomo@lodomo.dev" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.31.0", # For the web server
    "flask>=3.0.2", # For the web server
    "pynput>=1.7.6", # For the keyboard and mouse input
    "termcolor>=2.4.0", # For simulating terminal colors
]

[tool.setuptools]
packages = ["escapewright"]

[project.urls]
homepage = "https://lodomo.dev/"
repository = "https://github.com/lodomo/EscapeWright"
documentation = "https://github.com/lodomo/EscapeWright/wiki"

